--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,8 +14,9 @@ Version: ${project.version}
 checkupdate: true
 downloadupdate: true
 
-# The explosion radius that will be checked
-# Blocks in this radius will be affected.
+# The explosion radius that will be checked. Blocks in this radius will be affected.
+# Must be greater than zero and not above ten. Will create lag with high radius
+# See 'MATERIAL.BlastRadius' in materials.yml for custom distance.
 Radius: 3
 
 # DURABILITY IS NOW IN THE MATERIALS.YML FILE
