--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.snw</groupId>
     <artifactId>ObsidianDestroyer</artifactId>
-    <version>4.2.1</version>
+    <version>4.2.2-SNAPSHOT</version>
     <name>ObsidianDestroyer</name>
     <url>https://github.com/drtshock/ObsidianDestroyer</url>
 
@@ -75,6 +75,16 @@
             <groupId>com.turt2live.lib</groupId>
             <artifactId>Cannons</artifactId>
             <version>2.1R1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.lib</groupId>
+            <artifactId>Factions</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.lib</groupId>
+            <artifactId>MCore</artifactId>
+            <version>6.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
