--- a/obsidiandestroyer/pom.xml
+++ b/obsidiandestroyer/pom.xml
@@ -48,14 +48,10 @@
     <repositories>
         <repository>
             <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public/</url>
+            <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
         <repository>
-            <id>turt2live</id>
-            <url>http://repo.turt2live.com/</url>
-        </repository>
-        <repository>
-            <id>massivecraft</id>
+            <id>com.turt2live.lib</id>
             <url>http://repo.turt2live.com/</url>
         </repository>
     </repositories>
