--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>factions_1_8</module>
         <module>factions_2_5</module>
         <module>factions_2_6</module>
+        <module>factions_2_7</module>
         <module>obsidiandestroyer</module>
     </modules>
 
