Changes to offline faction handling, option to apply durability counter instead of blocking all damage

--- a/obsidiandestroyer/src/main/resources/config.yml
+++ b/obsidiandestroyer/src/main/resources/config.yml
@@ -83,6 +83,8 @@ Factions:
   # Toggle to manage an offline faction. (Override & Multiplier)
   # Enables an override that will allow [managed] blocks to be destroyed for a protected offline faction.
   HandleOffline: false
+  # Protect factions that offline instead of applying damage
+  ProtectOffline: false
   # Multiplier to use for changing the durability of an offline faction.
   OfflineDurabilityMultiplier: 1.0
   # Toggle to manage an online faction. (Multiplier)
