--- a/factions_1_6_9_UU/pom.xml
+++ b/factions_1_6_9_UU/pom.xml
@@ -15,17 +15,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.8.3-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>Factions</artifactId>
             <version>1.6.9.5-U0.1.12</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/../lib/Factions_1.6.9.5-U0.1.12.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>LATEST</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.drtshock</groupId>
